fix: fixes spacing for 1st comment

--- a/resources/sass/components/timeline.scss
+++ b/resources/sass/components/timeline.scss
@@ -102,6 +102,7 @@ ul[class="timeline__list"] {
 
 .timeline__reactions {
     padding-top: $tl-base-padding / 2;
+    padding-right: 24px;
 }
 
 /**
